<resources>
    <string name="app_name">ZhongBaoYi</string>
    <string name="scan_tip">please put the QR code in the viewfinder and scan</string>
    <string name="scan_retry">QR code scanning error, please rescan</string>
    <string name="scan_title">scan</string>
    <string name="xlistview_header_hint_normal">pull-down refresh</string>
    <string name="xlistview_header_hint_ready">release refresh data</string>
    <string name="xlistview_header_hint_loading">is loading...</string>
    <string name="xlistview_header_last_time">last update time: </string>
    <string name="xlistview_footer_hint_normal">view more</string>
    <string name="xlistview_footer_hint_ready">release uploads more</string>
    <string name="pull_to_refresh_pull_label">pull-down refresh</string>
    <string name="pull_to_refresh_release_label">pull-down refresh</string>
    <string name="pull_to_refresh_refreshing_label">is refreshing\u2026</string>
    <string name="pull_to_refresh_footer_release_label">pulls more</string>
    <string name="pull_to_refresh_footer_pull_label">pulls more</string>
    <string name="pull_to_refresh_footer_refreshing_label">is loading\u2026</string>
    <string name="act_no_data_load">has no data to load! </string>
    <string name="tab_home">Homepage</string>
    <string name="tab_category">Category</string>
    <string name="tab_message">Message</string>
    <string name="tab_periphery">Around</string>
    <string name="tab_cart">Cart</string>
    <string name="tab_personal">My</string>
    <string name="previouspage">previouspage</string>
    <string name="nextpage">nextpage</string>
    <string name="lastpage">lastpage</string>
    <string name="act_no_data">has no data!  </string>
    <string name="act_net_error">network connection failed!  </string>
    <string name="nostop">no shop</string>
    <string name="act_waiting">waiting... </string>
    <string name="act_stock">inventory: </string>
    <string name="act_a">a</string>
    <string name="act_no_more">cannot exceed the maximum number of products</string>
    <string name="act_less_one">purchase quantity cannot be less than 1 piece</string>
    <string name="act_loading">loading...</string>
    <string name="act_del_success">deleted successfully! </string>
    <string name="act_del_fail">delete failed! </string>
    <string name="address_manage">address management</string>
    <string name="selector">option</string>
    <string name="update">modify</string>
    <string name="del">delete</string>
    <string name="yuan">RMB</string>
    <string name="province">province</string>
    <string name="city">city</string>
    <string name="area">area/county</string>
    <string name="province_not_choice">did not select province</string>
    <string name="city_not_choice">did not select city</string>
    <string name="area_not_choice">did not select area/county</string>
    <string name="see_map">check the map</string>
    <string name="all_order">all orders</string>
    <string name="all_classifying">all classifying</string>
    <string name="refresh">refresh ===</string>
    <string name="total">total</string>
    <string name="stop_empty">no goods</string>
    <string name="balance">settlement</string>
    <string name="cart">shopping cart</string>
    <string name="please_choose_goods">please select goods</string>
    <string name="update_success">modified successfully! </string>
    <string name="updating">modifying...</string>
    <string name="update_password">change password</string>
    <string name="perdata">profile</string>
    <string name="virtualorders">virtualorder</string>
    <string name="servicelorders">service order</string>
    <string name="serviceorders">service order</string>
    <string name="old_password_not">old password is not filled!  </string>
    <string name="new_password_not">new password is not filled! </string>
    <string name="repeat_password_not">repeat password unfilled! </string>
    <string name="new_password_length_not_6">New password is no longer than 6! </string>
    <string name="new_password_length_not_24">New password is no longer than 24!</string>
    <string name="two_password_not_consistent">The password entered is inconsistent!  </string>
    <string name="evaluation_of_success">Evaluation successful!  </string>
    <string name="evaluation_of_fail">Evaluation failed! </string>
    <string name="evaluation">evaluation </string>
    <string name="add_success">added successfully! </string>
    <string name="update_fail">Modification failed! </string>
    <string name="add_fail">Add failed! </string>
    <string name="new_address">Add address </string>
    <string name="update_address"> modify the address </string>
    <string name="contact_empty">contact cannot be empty</string>
    <string name="location_empty">location cannot be empty</string>
    <string name="detail_empty">Detailed address cannot be empty</string>
    <string name="phone_empty">Mobile or phone cannot be empty</string>
    <string name="edit">edit </string>
    <string name="virtual">virtual order </string>
    <string name="footprint">footprint </string>
    <string name="collectionfcf">Collection baby </string>
    <string name="collectionfcf2">Collection store </string>
    <string name="collection_list">Favorites list </string>
    <string name="my_footprint">My footprints</string>
    <string name="buyer_orders">order management </string>
    <string name="reset_password"> reset password </string>
    <string name="username_empty">User name is not filled! </string>
    <string name="email_empty">email is not filled! </string>
    <string name="email_error">Please enter the correct email address! </string>
    <string name="goods_detail">Product details </string>
    <string name="goods_empty"> could not find this item, please select the product specification! </string>
    <string name="num_over"> the num of good over the stock! </string>
    <string name="storage_zero"> the storage is zero </string>
    <string name="goods_list">product list </string>
    <string name="operation_success">Operation succeeded! </string>
    <string name="operation_fail"> operation failed! </string>
    <string name="net_reconnect">The network connection failed, please reconnect! </string>
    <string name="goods_manage">Product Management </string>
    <string name="login_success">User login success </string>
    <string name="logging">Login....</string>
    <string name="password_empty">The password is not filled! </string>
    <string name="logout_fail">Logout failed! </string>
    <string name="safe_exit"> safe exit....</string>
    <string name="more">more </string>
    <string name="tomore">more></string>
    <string name="clean_cache">Clear the cache....</string>
    <string name="location">location </string>
    <string name="my_shop">My Store</string>
    <string name="my_shop2">My Store</string>
    <string name="shop_data">store information </string>
    <string name="confirm">OK</string>
    <string name="m100">100 meters </string>
    <string name="m200">200 meters </string>
    <string name="m300">300 meters </string>
    <string name="m400">400 meters </string>
    <string name="m500">500 meters </string>
    <string name="m600">600 meters </string>
    <string name="m700">700 meters </string>
    <string name="m800">800 meters </string>
    <string name="m900">900 meters </string>
    <string name="m1000">1000 meters </string>
    <string name="m1000_more">1000 meters or more </string>
    <string name="shop_position_empty">The store has no location information! </string>
    <string name="no_position">no location</string>
    <string name="tip">tip </string>
    <string name="no_position_get">No location information, please get the current location! </string>
    <string name="cancel">Cancel </string>
    <string name="commit_success">Submit successfully! </string>
    <string name="confirm_payment">confirm payment </string>
    <string name="goods_name">product name: </string>
    <string name="test_goods">tested goods </string>
    <string name="goods_des"> product description: </string>
    <string name="test_des">Detailed description of the test item </string>
    <string name="goods_price">Product price: </string>
    <string name="yuan_test">0.01 yuan </string>
    <string name="payment">payment </string>
    <string name="checking_account">Check account </string>
    <string name="release_goods88">submit </string>
    <string name="release_goods94">OK</string>
    <string name="release_goods112">Upload requirements</string>
    <string name="release_goods113">1. Please use a square image with a size of 4M or less in jpg\jpeg\png format. </string>
    <string name="release_goods114">2. The maximum size of the uploaded image will be kept at 1280 pixels. </string>
    <string name="release_goods115">3. ​​Up to 5 images can be uploaded for each color or existing images can be selected from the image space. The uploaded images will also be saved in the store image space for other uses. </string>
    <string name="release_goods116">4. Modify the order in which the product images are displayed by changing the sorting number. </string>
    <string name="release_goods117">5. The picture quality should be clear, not blurred, and the brightness should be sufficient. </string>
    <string name="release_goods118">6. Please click Next after the operation is completed, otherwise it will not take effect on the website. </string>
    <string name="release_goods119">Recommendation: </string>
    <string name="release_goods120">1. The main picture is a white background front view. </string>
    <string name="release_goods121">2. Sorting is Front View -> Rear View -> Side View -> Detail View. </string>
    <string name="release_goods127">Add specification value</string>
    <string name="release_goods128">Specification value name </string>
    <string name="integral_prompt8"> redemption completed </string>
    <string name="evaluation_tips1">Operation Tips: </string>
    <string name="evaluation_tips57">The redemption order has been submitted, I wish you a happy shopping </string>
    <string name="evaluation_tips58">Your redemption order has been successfully generated</string>
    <string name="evaluation_tips59"> redeem points : </string>
    <string name="evaluation_tips60"> is available through the User Center </string>
    <string name="evaluation_tips61">point redemption record</string>
    <string name="evaluation_tips62">View the status of the redemption order</string>
    <string name="evaluation_tips63">Continue shopping</string>
    <string name="evaluation_tips64">View details</string>
    <string name="member_centre39">Create time </string>
    <string name="member_centre43">revenue (yuan) </string>
    <string name="member_centre44">expenditure (yuan) </string>
    <string name="member_centre45">freeze (yuan) </string>
    <string name="member_centre46">Change Description </string>
    <string name="order_reminder41">1. "Payment Password" is used to enter the password when using "Account Balance" when ordering, please keep in mind and ensure security. </string>
    <string name="order_reminder42">2. If you modify or retrieve the "payment password", please complete the security verification operation and resubmit. </string>
    <string name="order_reminder43">*Set the payment password: </string>
    <string name="order_reminder44">6-20 characters, which can be composed of English, numbers and punctuation. </string>
    <string name="order_reminder45">* Confirm payment password: </string>
    <string name="near_reminder19">Please enter the quantity </string>
    <string name="find_reminder204"> Alipay </string>
    <string name="find_reminder205">WeChat payment </string>
    <string name="find_reminder266">Please enter the activity parameter </string>
    <string name="find_reminder267">Please enter a discount</string>
</resources>