<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_cj"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/member_centre39"
            android:textColor="@color/gray"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_sr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/member_centre43"
            android:textColor="@color/red"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_zc"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/member_centre44"
            android:textColor="@color/gray"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_dj"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/member_centre45"
            android:textColor="#27B0E5"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_bg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:lines="2"
            android:ellipsize="end"
            android:text="@string/member_centre46"
            android:textColor="@color/gray"
            android:textSize="13dp" />
    </LinearLayout>

</LinearLayout>