<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/release_goods127"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/ed_addspec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/release_goods128"
        android:paddingLeft="5dp"
        android:textColor="@color/gray"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="#3AB3FF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_qd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/release_goods94"
            android:textColor="#3AB3FF"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>
