<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/include_titile_sort" />

    <TextView
        android:id="@+id/tv_zfb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/find_reminder204"
        android:textColor="@color/txtcolor"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_wx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/find_reminder205"
        android:textColor="@color/txtcolor"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/confirm_payment"
        android:textColor="@color/white"
        android:textSize="15sp" />

</LinearLayout>